kubernetes/apps/documents/paperless/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app paperless
  namespace: &namespace documents
  annotations:
    kustomize.toolkit.fluxcd.io/substitute: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  hostnames:
    - "paperless.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 8000
          namespace: *namespace
